<resources>
    <string name="app_name">Medic</string>
    <!-- Onboard -->
    <string name="skip">Пропустить</string>
    <string name="analysis">Анализы</string>
    <string name="sample_collection">Экспресс сбор и получение проб</string>
    <string name="notifications">Уведомления</string>
    <string name="quickly_result">Вы быстро узнаете о результатах</string>
    <string name="complete">Завершить</string>
    <string name="monitoring">Мониторинг</string>
    <string name="our_doctors">Наши врачи всегда наблюдают \nза вашими показателями здоровья</string>

    <string name="hello">Добро пожаловать!</string>
    <string name="autorization">Войдите, чтобы пользоваться функциями\nприложения</string>
    <string name="email">Вход по E-mail</string>
    <string name="email_hint">example@mail.ru</string>
    <string name="continue_text">Далее</string>
    <string name="continue_with_Yandex">Войти с Яндекс</string>
    <string name="continue_with">Или войдите с помощью</string>
    <string name="code_verification">Введите код из E-mail</string>
    <string name="code_again">Отправить код повторно можно\nбудет через %1$s секунд</string>
    <string name="create_password">Создайте пароль</string>
    <string name="text_safe">Для защиты ваших персональных данных</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <!-- Create card-->
    <string name="create_card_str">Создание карты\nпациента</string>
    <string name="without_card_text">Без карты пациента вы не сможете заказать анализы.</string>
    <string name="result_analysis_text">В картах пациентов будут храниться результаты\nанализов вас и ваших близких.</string>
    <string name="name">Имя</string>
    <string name="lastname">Отчество</string>
    <string name="surname">Фамилия</string>
    <string name="date_birthday">Дата рождения</string>
    <string name="gender">Пол</string>
    <string-array name="list_gender">
        <item>Женский</item>
        <item>Мужской</item>
    </string-array>
    <string name="create">Создать</string>

    <!-- bottom navigation menu-->
    <string name="results">Результаты</string>
    <string name="support">Поддержка</string>
    <string name="profile">Профиль</string>

    <!--main screen-->
    <string name="search_analysis">Искать анализы</string>

    <!--analysis -->
    <string name="name_analysis">ПЦР-тест на определение РНК коронавируса стандартный</string>
    <string name="time_analysis">2 дня</string>
    <string name="cost_analysis">1800 ₽</string>
    <string name="add_analysis">Добавить</string>
    <string name="discount_and_news">Акции и новости</string>
    <string name="catalog_analysis">Каталог анализов</string>
    <string name="delete">Убрать</string>

    <!--banners -->
    <string name="name_banners">Чек-ап для\nмужчин</string>
    <string name="subscription_banners">9 исследований</string>
    <string name="cost_banners">8000 ₽</string>

    <string name="name_banners2">Подготовка к\nвакцинации</string>
    <string name="subscription_banners2">Комплексное обследование перед вакцинацией</string>
    <string name="cost_banners2">4000 ₽</string>

    <!-- splash screen -->
    <string name="pref_previously_started">true</string>

    <!--search -->
    <string name="cancel">Отменить</string>

    <!-- profile-->
    <string name="profile_title">Карта пациента</string>
    <string name="save_profile">Сохранить</string>

    <!-- card_product -->
    <string name="description">Описание</string>
    <string name="preparation">Подготовка</string>
    <string name="results_in">Результаты через:</string>
    <string name="bio">Биоматериал:</string>
    <string name="add_with">Добавить за %1$s</string>

    <string name="in_basket">В корзину</string>

    <string name="basket">Корзина</string>

    <string name="execution_in">Перейти к оформлению заказа</string>


    <plurals name="patient">
        <item quantity="one">%d пациент</item>
        <item quantity="two">%d пациента</item>
        <item quantity="other">%d пациента</item>
    </plurals>

    <!-- order registration -->
    <string name="order_registration">Оформление заказа</string>
    <string name="address">Адрес *</string>
    <string name="address_hint">Введите ваш адрес</string>
    <string name="date_time">Дата и время*</string>
    <string name="date_time_hint">Выберите дату и время</string>
    <string name="who_analysis">Кто будет сдавать анализы? *</string>
    <string name="add_patient">Добавить еще пациента</string>
    <string name="number">Телефон *</string>
    <string name="comments">Комментарий</string>
    <string name="wishes">Можете оставить свои пожелания</string>
    <string name="apple_pay">Оплата Apple Pay</string>
    <string name="promocode">Промокод</string>
    <string name="buy">Заказать</string>
    <string name="address_analysis">Адрес сдачи анализов</string>
    <string name="your_address">Ваш адрес</string>

    <string name="longitude">Долгота</string>
    <string name="width">Широта</string>
    <string name="height">Высота</string>

    <string name="flat">Квартира</string>
    <string name="entrance">Подъезд</string>
    <string name="floor">Этаж</string>

    <string name="doorphone">Домофон</string>
    <string name="save_address">Сохранить этот адрес?</string>
    <string name="hint_save_address">Название: например дом, работа</string>
    <string name="confirm_address">Подтвердить</string>

    <string name="date_and_time">Дата и время</string>
    <string name="select_date">Выберите дату</string>
    <string name="select_time">Выберите время</string>

    <string name="select_patient">Выбор пациента</string>
    <string name="add_patient_1">Добавить пациента</string>
</resources>