<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/analysis"
        android:icon="@drawable/icon_analysis_unchecked"
        android:id="@+id/bottom_navigation_menu_analysis"
        />
    <item
        android:title="@string/results"
        android:icon="@drawable/icon_results_unchecked"
        android:id="@+id/bottom_navigation_menu_results"
        />
    <item
        android:icon="@drawable/icon_support_unchecked"
        android:title="@string/support"
        android:id="@+id/bottom_navigation_menu_support"
        />
    <item
        android:title="@string/profile"
        android:icon="@drawable/icon_profile_unchecked"
        android:id="@+id/bottom_navigation_menu_profile"
        />
</menu>