<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePasswordActivity">
<TextView
    android:id="@+id/skip"
    android:layout_width="wrap_content"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="40dp"
    android:layout_marginRight="20dp"
    android:text="@string/skip"
    android:textColor="@color/skip_color2"
    android:textSize="15sp"
    android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/create_password_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skip"
        android:layout_marginTop="40dp"
        android:text="@string/create_password"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/safe_text"
        app:layout_constraintTop_toBottomOf="@id/create_password_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:text="@string/text_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/current_page_create_password_activity"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/safe_text"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="9dp"
            android:src="@drawable/board_true" />
        <ImageView
            android:src="@drawable/board_false"
            android:layout_marginRight="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/board_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/board_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <GridLayout
        app:layout_constraintTop_toBottomOf="@id/current_page_create_password_activity"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="44dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/one"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            />
        <Button
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/two"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            />
        <Button
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/three"
            android:layout_marginBottom="24dp"
            /> <Button
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/three"
            android:layout_marginBottom="24dp"
            />
        <Button
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/four"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            />
        <Button
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/five"
            android:layout_marginBottom="24dp"
            />
        <Button
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/six"
            android:layout_marginBottom="24dp"
            /> <Button
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/seven"
            android:layout_marginBottom="24dp"
            />
        <Button
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/eight"
            android:layout_marginBottom="24dp"
            />
        <Button
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/nine"
            android:layout_marginBottom="24dp"
            />
        <Button
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/zero"
            android:layout_marginBottom="24dp"
            /><ImageButton
            android:layout_column="2"
            android:layout_row="3"
            android:src="@drawable/delete"
            android:layout_marginBottom="24dp"
            />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>