<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCardActivity">
<TextView
    android:id="@+id/create_card_textview"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginTop="32dp"
    android:layout_marginLeft="20dp"
    android:text="@string/create_card_str"
    android:textSize="24sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/skip_color2"
        android:textSize="15sp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/without_card_textview"
        android:layout_marginTop="16dp"
        android:text="@string/without_card_text"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/create_card_textview"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/result_analysis_textview"
        android:layout_width="match_parent"
        android:text="@string/result_analysis_text"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/without_card_textview"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/name"
        android:padding="14dp"
        android:id="@+id/editText_name"
        app:layout_constraintTop_toBottomOf="@id/result_analysis_textview"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/lastname"
        android:padding="14dp"
        android:id="@+id/editText_lastname"
        app:layout_constraintTop_toBottomOf="@id/editText_name"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/surname"
        android:padding="14dp"
        android:id="@+id/editText_surname"
        app:layout_constraintTop_toBottomOf="@id/editText_lastname"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/date_birthday"
        android:padding="14dp"
        android:id="@+id/editText_date_birthday"
        app:layout_constraintTop_toBottomOf="@id/editText_surname"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<EditText
    android:id="@+id/editText_gender"
    android:layout_marginTop="24dp"
    android:layout_marginHorizontal="20dp"
    android:hint="@string/gender"
    android:padding="14dp"
    app:layout_constraintTop_toBottomOf="@id/editText_date_birthday"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <Button
        app:layout_constraintTop_toBottomOf="@+id/editText_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>