<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.RegistrationActivity">
<TextView
    android:layout_marginLeft="20dp"
    android:id="@+id/textView_hello"
    android:layout_width="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="60dp"
    android:drawablePadding="16dp"
    android:drawableLeft="@drawable/hi"
    android:text="@string/hello"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="24sp"
    android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/auto_text"
        android:textSize="15sp"
        android:layout_marginTop="23dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/textView_hello"
        app:layout_constraintTop_toBottomOf="@id/textView_hello"
        android:text="@string/autorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
<TextView
    android:id="@+id/auto_email_text"
    android:text="@string/email"
    android:textSize="14sp"
    android:layout_width="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/auto_text"
    app:layout_constraintLeft_toLeftOf="@id/auto_text"
    android:layout_marginTop="64dp"
    android:layout_height="wrap_content"/>
    <EditText
        android:background="@drawable/edittext_style"
        android:layout_marginTop="4dp"
        android:id="@+id/editText_email"
        android:hint="@string/email_hint"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/auto_email_text"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_style"
        android:enabled="false"
        android:padding="16dp"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/editText_email" />

    <TextView
        android:layout_marginTop="238dp"
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_with"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/buttonNext"
        app:layout_constraintBottom_toTopOf="@id/btn_continue_with_Yandex"
         />

    <Button
        android:id="@+id/btn_continue_with_Yandex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/button_yandex_style"
        android:fontFamily="sans-serif-medium"
        android:padding="18dp"
        android:text="@string/continue_with_Yandex"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help"
     />


</androidx.constraintlayout.widget.ConstraintLayout>