<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@android:color/transparent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/address_analysis"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:layout_marginRight="44dp"
        android:id="@+id/address_analysis"
        app:layout_constraintRight_toLeftOf="@id/cancel"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:padding="7dp"
        android:background="@android:color/transparent"
        android:id="@+id/cancel"
        android:src="@drawable/map"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textview_your_address"
        app:layout_constraintTop_toBottomOf="@id/address_analysis"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@color/color_categories"
        android:text="@string/your_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:textColor="@color/black"
        android:textSize="15sp"
        android:background="@drawable/edittext_style"
        android:id="@+id/edittext_address"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/textview_your_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/linearlayout_textview"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edittext_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/color_categories"
            android:text="@string/longitude"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="12dp"
            android:textSize="14sp"
            android:textColor="@color/color_categories"
            android:text="@string/width"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="12dp"
            android:textSize="14sp"
            android:textColor="@color/color_categories"
            android:text="@string/height"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_edittext"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="number"
            android:id="@+id/longitude_address"
            android:layout_marginRight="12dp"
            android:background="@drawable/edittext_style"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="number"
            android:id="@+id/width_address"
            android:layout_marginRight="12dp"
            android:background="@drawable/edittext_style"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="number"
            android:id="@+id/height_address"
            android:background="@drawable/edittext_style"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_textview2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/color_categories"
            android:text="@string/flat"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="12dp"
            android:textSize="14sp"
            android:textColor="@color/color_categories"
            android:text="@string/entrance"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="12dp"
            android:textSize="14sp"
            android:textColor="@color/color_categories"
            android:text="@string/floor"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_edittext2"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="number"
            android:id="@+id/flat_address"
            android:layout_marginRight="12dp"
            android:background="@drawable/edittext_style"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="number"
            android:id="@+id/entrance_address"
            android:layout_marginRight="12dp"
            android:background="@drawable/edittext_style"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="number"
            android:id="@+id/floor_address"
            android:background="@drawable/edittext_style"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textview_doorphone"
        android:textSize="14sp"
        android:textColor="@color/color_categories"
        android:text="@string/doorphone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_edittext2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:background="@drawable/edittext_style"
        android:id="@+id/edittext_doorphone"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/textview_doorphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/save_address"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edittext_doorphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.SwitchCompat
        android:padding="2dp"
        android:id="@+id/switch_save"
        android:layout_marginTop="6dp"
        android:thumb="@drawable/thumb"
        app:track="@drawable/track_address"
        app:layout_constraintTop_toBottomOf="@id/edittext_doorphone"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:visibility="gone"
        android:hint="@string/hint_save_address"
        android:textColorHint="@color/AfternameOnBoard_color"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="18dp"
        android:background="@drawable/edittext_style"
        android:id="@+id/edittext_address_save"
        app:layout_constraintTop_toBottomOf="@id/switch_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:enabled="false"
        android:text="@string/confirm_address"
        android:id="@+id/button_add"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_address_save"
        android:layout_width="match_parent"
        android:background="@drawable/button_style"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>