<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@android:color/transparent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:layout_marginRight="44dp"
        android:id="@+id/name"
        android:text="@string/date_and_time"
        app:layout_constraintRight_toLeftOf="@id/cancel"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:padding="7dp"
        android:background="@drawable/icon_cancel_style"
        android:id="@+id/cancel"
        android:src="@drawable/icon_cancel"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textview_date"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginTop="24dp"

        android:textSize="16sp"
        android:textColor="@color/AfternameOnBoard_color"
        android:text="@string/select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:focusable="false"
        android:drawableRight="@drawable/drop_down"
        android:background="@drawable/edittext_style"
        android:textColor="@color/black"
        android:id="@+id/date"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textview_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textview_time"
        android:text="@string/select_time"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textColor="@color/AfternameOnBoard_color"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/time_recycle_view"
       app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
       android:layout_marginTop = "16dp"
       app:layout_constraintTop_toBottomOf="@id/textview_time"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
    <Button
        android:enabled="false"
        android:text="@string/confirm_address"
        android:id="@+id/button_add"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/time_recycle_view"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_style"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>